# SGE

./: CMakeLists.txt  LICENSE
SGECore/: CMakeLists.txt
SGECore/include/SGECore/: Application.hpp  Event.hpp  Log.hpp
SGECore/include/SGECore/Utils/: test.hpp
SGECore/src/SGECore/: Application.cpp  Window.cpp  Window.hpp
SGECore/src/SGECore/Utils/: test.cpp
SGEEditor/: CMakeLists.txt
SGEEditor/src/: main.cpp
